@@ -1,5 +1,10 @@
 2018-04-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/xcf.c (ReadXCFImage): Require that XCF file offsets be in
+	ascending order to avoid DOS.  Fixes oss-fuzz 7333
+	"graphicsmagick/coder_XCF_fuzzer: Out-of-memory in
+	graphicsmagick_coder_XCF_fuzzer". (Credit to OSS-Fuzz)
+
 	* coders/wpg.c (UnpackWPGRaster): Fix memory leak in error return
 	path. Fixes oss-fuzz 7338 "graphicsmagick/enhance_fuzzer:
 	Direct-leak in UnpackWPGRaster". (Credit to OSS-Fuzz)
